# limbo-rs

./: Cargo.toml  LICENSE  README.md
example-config/: bar.toml  variables.toml
example-config/modules/: audio.toml  date.toml  formatting.toml  github.toml  hue.toml  internet.toml  music.toml  notifications.toml  package-updates.toml  pomodoro.toml  song-recognition.toml  tray.toml  twitch.toml  update-wallpaper.toml  weather.toml  workspaces.toml
src/: bin.rs  main.rs
src/config/: bar.rs  config.rs  mod.rs  module.rs
src/config/structs/: bar.rs  mod.rs  module.rs  primitive.rs
